--- a/package.json
+++ b/package.json
@@ -105,7 +105,9 @@
     "start:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ dotenv blendid",
     "build:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ dotenv blendid -- build",
     "start:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ dotenv blendid",
-    "build:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ dotenv blendid -- build"
+    "build:session-monk.topmonks.com": "BLENDID_CONFIG_PATH=./session-monk.topmonks.com/config/ dotenv blendid -- build",
+    "start:room.monks.cloud": "BLENDID_CONFIG_PATH=./room.monks.cloud/config/ dotenv blendid",
+    "build:room.monks.cloud": "BLENDID_CONFIG_PATH=./room.monks.cloud/config/ dotenv blendid -- build"
   },
   "resolutions": {
     "bluebird": "npm:bluebird@3.7.2",
