Fixed site name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -388,7 +388,7 @@ workflows:
               only: trunk
       - deploy_site:
           name: deploy-room-monks-cloud
-          site_name: room-monks-cloud
+          site_name: room.monks.cloud
           context: org-global
           requires:
             - provision
