--- a/room.monks.cloud/src/static/manifest.json
+++ b/room.monks.cloud/src/static/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "vizualizer",
-    "short_name": "vizualizer",
-    "start_url": ".",
+    "name": "Monksroom Visualizer",
+    "short_name": "visualizer",
+    "start_url": "/",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#000000",
+    "theme_color": "#000000",
+    "description": "Sound visualizer for Monksroom sessions.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
