--- a/package.json
+++ b/package.json
@@ -110,7 +110,9 @@
     "start:room.monks.cloud": "BLENDID_CONFIG_PATH=./room.monks.cloud/config/ dotenv blendid",
     "build:room.monks.cloud": "BLENDID_CONFIG_PATH=./room.monks.cloud/config/ dotenv blendid -- build",
     "start:www.ingridapp.io": "BLENDID_CONFIG_PATH=./www.ingridapp.io/config/ dotenv blendid",
-    "build:www.ingridapp.io": "BLENDID_CONFIG_PATH=./www.ingridapp.io/config/ dotenv blendid -- build"
+    "build:www.ingridapp.io": "BLENDID_CONFIG_PATH=./www.ingridapp.io/config/ dotenv blendid -- build",
+    "start:arx.monks.cloud": "BLENDID_CONFIG_PATH=./arx.monks.cloud/config/ dotenv blendid",
+    "build:arx.monks.cloud": "BLENDID_CONFIG_PATH=./arx.monks.cloud/config/ dotenv blendid -- build"
   },
   "resolutions": {
     "bluebird": "npm:bluebird@3.7.2",
