--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material/layout-grid": "^7.0.0",
     "@material/top-app-bar": "^7.0.0",
     "@pulumi/aws": "^2.13.1",
+    "@pulumi/awsx": "^0.21.0",
     "@pulumi/pulumi": "^2.8.1",
     "@types/node": "^14.0.27",
     "lit-html": "^1.2.1",
@@ -117,7 +118,7 @@
   "resolutions": {
     "bluebird": "npm:bluebird@3.7.2",
     "fsevents": "npm:dummypkg-a@1.0.0",
-    "lodash": "npm:lodash@4.17.15",
+    "lodash": "npm:lodash@4.17.19",
     "html-minifier": "npm:html-minifier-terser@5.0.3",
     "source-map-resolve": "npm:source-map-resolve@0.6.0"
   },
