--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,8 +151,8 @@ jobs:
             mkdir -p ./results
             yarn test:ava
             cat websites.json | jq -rM '.["<< parameters.site_name >>"] | .["lhci"] as $ci | {$ci}' > patch.json
-            jq --slurp 'reduce .[] as $item ({}; . * $item)' lighthouserc.json patch.json > lighthouserc.json
-            cat lighthouserc.json
+            jq --slurp 'reduce .[] as $item ({}; . * $item)' lighthouserc.json patch.json > .lighthouserc.json
+            cat .lighthouserc.json
             yarn lhci autorun --collect.staticDistDir="public/<< parameters.site_name >>" \
               --upload.extraHeaders.Authorization="Basic ${LHCI_BASIC_AUTH}" \
               --upload.urlReplacementPatterns="s/^/: << parameters.site_name >>/"
