--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
   docker: circleci/docker@1.4.0
   github: topmonks/github@1.0.1
   pulumi: pulumi/pulumi@2.0.0
-  swarmpit: topmonks/swarmpit@1.1.0
+  swarmpit: topmonks/swarmpit@1.2.0
 
 executors:
   nodejs:
@@ -190,15 +190,6 @@ jobs:
       - github/merge_pr:
           rebase: true
 
-  deploy_lhci:
-    executor:
-      docker/docker
-    steps:
-      - checkout
-      - swarmpit/deploy_stack:
-          stack_name: lighthouse-ci
-          compose_file_path: lhci.dev.tmcloud.io/docker-compose.yml
-
 workflows:
   build_and_deploy:
     jobs:
@@ -224,8 +215,10 @@ workflows:
           filters:
             branches:
               only: trunk
-      - deploy_lhci:
+      - swarmpit/deploy:
           name: deploy-lighthouse-ci
+          stack_name: lighthouse-ci
+          compose_file_path: lhci.dev.tmcloud.io/docker-compose.yml
           context: org-swarmpit-dev
           requires:
             - publish-lhci
