[lhci.dev.tmcloud.io] Run with our configuration file

--- a/lhci.dev.tmcloud.io/Dockerfile
+++ b/lhci.dev.tmcloud.io/Dockerfile
@@ -4,3 +4,4 @@ COPY .lighthouserc.js .
 COPY docker-entrypoint.sh .
 
 ENTRYPOINT [ "docker-entrypoint.sh" ]
+CMD [ "yarn", "lhci", "server", "--config=./.lighthouserc.js" ]
