[lhci.dev.tmcloud.io] Fixed entrypoint

--- a/lhci.dev.tmcloud.io/Dockerfile
+++ b/lhci.dev.tmcloud.io/Dockerfile
@@ -3,5 +3,5 @@ FROM patrickhulce/lhci-server:latest
 COPY .lighthouserc.js .
 COPY docker-entrypoint.sh .
 
-ENTRYPOINT [ "docker-entrypoint.sh" ]
-CMD [ "yarn", "lhci", "server", "--config=./.lighthouserc.js" ]
+ENTRYPOINT ["./docker-entrypoint.sh"]
+CMD ["yarn", "lhci", "server", "--config=./.lighthouserc.js"]
