[lhci.dev.tmcloud.io] Correct basic auth labels

--- a/lhci.dev.tmcloud.io/docker-compose.yml
+++ b/lhci.dev.tmcloud.io/docker-compose.yml
@@ -16,12 +16,12 @@ services:
       labels:
         traefik.enable: 'true'
         traefik.docker.network: proxy
+        traefik.frontend.auth.basic.removeHeader: 'true'
+        traefik.frontend.auth.basic.users: 'admin:$2y$05$rc3AWLpuHvIsAmQcFG/1s.sWuWqKn0kA9KZP/MhiczKrIsSIzs7yO'
         traefik.frontend.headers.forceSTSHeader: 'true'
         traefik.frontend.headers.STSIncludeSubdomains: 'true'
         traefik.frontend.headers.STSPreload: 'true'
         traefik.frontend.headers.STSSeconds: '315360000'
-        traefik.frontend.http.auth.basic.removeHeader: 'true'
-        traefik.frontend.http.auth.basic.users: 'admin:$2y$05$rc3AWLpuHvIsAmQcFG/1s.sWuWqKn0kA9KZP/MhiczKrIsSIzs7yO'
         traefik.frontend.rule: Host:lhci.dev.tmcloud.io
         traefik.port: '9001'
       placement:
