--- a/lhci.dev.tmcloud.io/docker-compose.yml
+++ b/lhci.dev.tmcloud.io/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         traefik.enable: 'true'
         traefik.docker.network: proxy
         traefik.frontend.auth.basic.removeHeader: 'true'
-        traefik.frontend.auth.basic.users: 'admin:$2y$05$rc3AWLpuHvIsAmQcFG/1s.sWuWqKn0kA9KZP/MhiczKrIsSIzs7yO'
+        traefik.frontend.auth.basic.users: 'admin:$apr1$Fm.nQhpt$gpSg3OvssXIdD6FLVyDzb1'
         traefik.frontend.headers.forceSTSHeader: 'true'
         traefik.frontend.headers.STSIncludeSubdomains: 'true'
         traefik.frontend.headers.STSPreload: 'true'
