[axr.monks.cloud] Added team members

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /results/
 node_modules/
 arx.monks.cloud/src/data/investments.json
+arx.monks.cloud/src/data/news.json
+arx.monks.cloud/src/data/team.json
