--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ node_modules/
 arx.monks.cloud/src/data/investments.json
 arx.monks.cloud/src/data/news.json
 arx.monks.cloud/src/data/team.json
+session-monk.topmonks.com/session-monk.topmonks.com.iml
