--- a/Pulumi.topmonks-webs.yaml
+++ b/Pulumi.topmonks-webs.yaml
@@ -1,3 +1,8 @@
 encryptionsalt: v1:blUUNS9C5pA=:v1:jLsq9Ge5rxKq+E6v:s412lfZWzrud+kb7oQpTq/GgkYgaxA==
 config:
   aws:region: eu-central-1
+  topmonks_website:assets_paths:
+    - /assets/*
+    - /static/*
+  topmonks_website:assets_caching_lambda_arn: "arn:aws:lambda:us-east-1:661884430919:function:CacheHeaders:2"
+  topmonks_website:security_headers_lambda_arn: "arn:aws:lambda:us-east-1:661884430919:function:SecurityHeaders:7"
