--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pulumi/aws": "^3.6.1",
     "@pulumi/awsx": "^0.22.0",
     "@pulumi/pulumi": "^2.11.2",
+    "@topmonks/pulumi-aws": "^1.0.0",
     "@types/node": "^14.11.8",
     "lit-html": "^1.3.0",
     "lodash": "4.17.20",
