--- a/www.hookamonk.com/config/path-config.json
+++ b/www.hookamonk.com/config/path-config.json
@@ -18,17 +18,17 @@
 
   "javascripts": {
     "src": "javascripts",
-    "dest": "javascripts"
+    "dest": "assets/js"
   },
 
   "stylesheets": {
     "src": "stylesheets",
-    "dest": "stylesheets"
+    "dest": "assets/css"
   },
 
   "images": {
     "src": "images",
-    "dest": "images"
+    "dest": "assets/img"
   },
 
   "fonts": {
@@ -38,6 +38,6 @@
 
   "icons": {
     "src": "icons",
-    "dest": "images"
+    "dest": "assets/img"
   }
 }
