--- a/package.json
+++ b/package.json
@@ -115,7 +115,9 @@
     "start:arx.monks.cloud": "BLENDID_CONFIG_PATH=./arx.monks.cloud/config/ dotenv blendid",
     "build:arx.monks.cloud": "BLENDID_CONFIG_PATH=./arx.monks.cloud/config/ dotenv blendid -- build",
     "start:zive.tv": "BLENDID_CONFIG_PATH=./zive.tv/config/ dotenv blendid",
-    "build:zive.tv": "BLENDID_CONFIG_PATH=./zive.tv/config/ dotenv blendid -- build"
+    "build:zive.tv": "BLENDID_CONFIG_PATH=./zive.tv/config/ dotenv blendid -- build",
+    "start:cbx.cz": "BLENDID_CONFIG_PATH=./cbx.cz/config/ dotenv blendid",
+    "build:cbx.cz": "BLENDID_CONFIG_PATH=./cbx.cz/config/ dotenv blendid -- build"
   },
   "resolutions": {
     "bluebird": "npm:bluebird@3.7.2",
