--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@topmonks/pulumi-aws": "^1.6.1",
     "@types/node": "^14.14.13",
     "lit-html": "^1.3.0",
+    "lodash": "^4.17.20",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
