--- a/package.json
+++ b/package.json
@@ -117,7 +117,9 @@
     "start:zive.tv": "BLENDID_CONFIG_PATH=./zive.tv/config/ dotenv blendid",
     "build:zive.tv": "BLENDID_CONFIG_PATH=./zive.tv/config/ dotenv blendid -- build",
     "start:cbx.cz": "BLENDID_CONFIG_PATH=./cbx.cz/config/ dotenv blendid",
-    "build:cbx.cz": "BLENDID_CONFIG_PATH=./cbx.cz/config/ dotenv blendid -- build"
+    "build:cbx.cz": "BLENDID_CONFIG_PATH=./cbx.cz/config/ dotenv blendid -- build",
+    "start:chytrybox.cz": "BLENDID_CONFIG_PATH=./chytrybox.cz/config/ dotenv blendid",
+    "build:chytrybox.cz": "BLENDID_CONFIG_PATH=./chytrybox.cz/config/ dotenv blendid -- build"
   },
   "resolutions": {
     "bluebird": "npm:bluebird@3.7.2",
