--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,10 +64,10 @@ jobs:
       - run: |
           mkdir results
           yarn test
-      - store_artifacts:
-          path: ./results
-      - store_test_results:
-          path: ./results
+#      - store_artifacts:
+#          path: ./results
+#      - store_test_results:
+#          path: ./results
       - persist_to_workspace:
           root: .
           paths: [ public ]
