--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pulumi/pulumi": "^2.18.2",
     "@topmonks/pulumi-aws": "^1.6.1",
     "@types/node": "^14.14.22",
+    "cheerio": "^1.0.0-rc.5",
     "esbuild": "^0.8.34",
     "lit-html": "^1.3.0",
     "lodash": "^4.17.20",
