--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "esbuild": "^0.8.34",
     "lit-html": "^1.3.0",
     "lodash": "^4.17.20",
+    "node-fetch": "^2.6.1",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
