[www.hackercamp.cz] Added new site

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -460,3 +460,20 @@ workflows:
           filters:
             branches:
               only: trunk
+      - test_site:
+          name: test-www-hackercamp-cz
+          site_name: www.hackercamp.cz
+          context: org-global
+          requires:
+            - build
+            - deploy-lighthouse-ci
+      - deploy_site:
+          name: deploy-www-hackercamp-cz
+          site_name: www.hackercamp.cz
+          context: org-global
+          requires:
+            - provision
+            - test-www-hackercamp-cz
+          filters:
+            branches:
+              only: trunk
