Upgraded yarn to berry

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,22 @@
 .DS_Store
 .env
 .idea/
-/.pnp/
-/.pnp.js
-/.lighthouseci/
-/package-lock.json
-/public/
-/results/
+.lighthouseci/
+public/
+results/
+
 node_modules/
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp/
+.pnp.*
+yarn-error.log
+package-lock.json
+
 arx.monks.cloud/src/data/investments.json
 arx.monks.cloud/src/data/news.json
 arx.monks.cloud/src/data/team.json
